# financial-analysis

./: .env  .env.example  .gitignore  Makefile  README.md  index.html  package-lock.json  package.json  pyproject.toml  railway.json  requirements-dev.txt  requirements.txt  tsconfig.json  tsconfig.server.json  vite.config.ts
.codebuddy/: README.md
.codebuddy/design/: 00-index.md  01-architecture.md  02-database-v1.md  03-database-v2.md  04-skeleton.md  05-data-layer.md  06-feature-quality.md  07-strategy-scoring-report.md  08-strategy-v2-layered-selection.md  09-stock-relationship-engine.md  10-abnormal-detector.md  11-web-console.md  12-pattern-definition-editor.md  13-event-statistics-engine.md  13-pattern-outcome-backtest.md  14-earnings-event-analytics.md  14-earnings-mispricing-engine.md  14-stage-role-feature-system.md  15-stock-clustering.md  16-factor-neutralization.md  16-market-representation.md  16-series-transformation.md  17-event-stats-frontend-ia.md
PRD/: 01-基金详情增强_PRD.md  02-高级自选与持有管理_PRD.md  03-基金对比中心_PRD.md  04-条件选基与排行榜_PRD.md  05-组合诊断与持仓穿透_PRD.md  06-多账户账本与导入中心_PRD.md  07-提醒中心与自动化_PRD.md  08-周报月报与复盘中心_PRD.md  README.md
api/: [...path].ts
data/: fund-universe-cache.json  holdings.json  model-provider-settings.json  screener-sector-cache.json  watchlist.json
dist-server/: data-store.js  fund-service.js  index.js
docs/: DEPLOY_RAILWAY.md  FUND_AGENT_ANALYSIS.md  FUND_NEWS_MCP.md  PROJECT_ARCHITECTURE.md
examples/: fund-agent-023408-input.json  fund-agent-023408-output.json  fund-agent-161725-input.json  fund-agent-161725-output.json  fund-agent-270042-input.json  fund-agent-270042-output.json  fund-news-mcp-input.json  fund-news-mcp-output.json
quant_system/: cli.py  main.py
scripts/: check_akshare.py  init_db.py  seed_mock_kline.py  smoke_test.sh
server/: analysis-utils.ts  app.ts  data-store.ts  env.ts  fund-analysis-service.ts  fund-research-service.ts  fund-service.ts  index.ts  model-provider-settings-service.ts  news-service.ts  portfolio-service.ts  screener-service.ts  stock-analysis-service.ts  stock-research-service.ts  stock-service.ts  types.ts
server/mcp/: app.ts  (+3 more)
src/: App.tsx  styles.css  types.ts
web/: README.md  index.html  package-lock.json  package.json  vite.config.ts
(+276 files in other folders)
