[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "quant-system"
version = "0.1.0"
description = "个人 A 股量化分析系统：日频拉数、算指标、跑策略、出日报"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Monody" }]
license = { text = "MIT" }
keywords = ["quant", "stock", "a-share", "akshare"]
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
]

# 运行时依赖只列直接依赖，具体版本以 requirements.txt 为准
dependencies = [
    "akshare>=1.15.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0,<2.1.0",
    # "pandas-ta>=0.3.14b0",  # 已从 PyPI 移除老版本；项目实际未 import pandas_ta，先注释掉
    "SQLAlchemy>=2.0.30",
    "APScheduler>=3.10.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "loguru>=0.7.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
    "plotly>=5.22.0",
    "matplotlib>=3.8.0",
    "tenacity>=8.3.0",
    "diskcache>=5.6.0",
    "python-dotenv>=1.0.0",
    "alembic>=1.13.0",
    "openai>=1.30.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "freezegun>=1.5.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
]
api = ["fastapi>=0.111.0", "uvicorn[standard]>=0.30.0"]
vector = ["faiss-cpu>=1.8.0", "chromadb>=0.5.0"]

[project.scripts]
# 安装后可以直接在终端敲 `qs update` / `qs report` 等
qs = "quant_system.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["quant_system"]

# ============ 工具链配置 ============

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "PL", "RUF"]
ignore = ["PLR0913"]  # 允许多参数函数

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
strict = false           # 起步先松，稳定后打开
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["quant_system/tests"]
python_files = "test_*.py"
addopts = "-ra --strict-markers"
markers = [
    "slow: 慢速测试（默认跳过，加 --run-slow 才跑）",
    "network: 需要联网（akshare 真实调用）",
]
